# scm-record

./: .rustfmt.toml  Cargo.toml  README.md
docs/: keyboard-controls.md  tree-sitter-integration.md
docs/adrs/: 001-tree-sitter-integration.md  002-auto-detect-directory-diff.md
scm-diff-editor/: Cargo.toml
scm-diff-editor/src/: lib.rs  main.rs  render.rs
scm-diff-editor/tests/: test_scm_diff_editor.rs
scm-record/: Cargo.toml
scm-record/benches/: benches.rs
scm-record/examples/: load_json.rs  semantic_analysis.rs  static_contents.rs
scm-record/src/: helpers.rs  lib.rs  render.rs  semantic.rs  types.rs  ui.rs  util.rs
scm-record/src/semantic/: hcl.rs  java.rs  kotlin.rs  markdown.rs  python.rs  rust.rs  tests_common.rs  tests_java.rs  tests_kotlin.rs  tests_python.rs  tests_rust.rs  yaml.rs
scm-record/tests/: test_scm_record.rs
syntax-diff-editor/: Cargo.toml
syntax-diff-editor/src/: lib.rs  main.rs  render.rs  testing.rs
syntax-diff-editor/tests/: test_scm_diff_editor.rs
