[package]
authors = ["Waleed Khan <me@waleedkhan.name>", "Jake Swenson"]
description = "Interactive diff editor with syntax-aware navigation via tree-sitter. Fork of scm-diff-editor with semantic code navigation."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "syntax-diff-editor"
repository = "https://github.com/jakeswenson/syntax-diff-editor"
version = "0.8.0"

# Keep in sync with `scm-record/Cargo.toml`.
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tree-sitter"]
# Forward the tree-sitter feature to scm-record for semantic navigation support
tree-sitter = ["scm-record/tree-sitter"]

[dependencies]
clap = { workspace = true }
diffy = { workspace = true }
scm-record = { version = "0.8", path = "../scm-record" }
sha1 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
maplit = { workspace = true }
